more better work (collection meta data query)
