# snapdragon/dashboard-restapi/api/swagger/swagger.yaml
@@ -44,8 +44,46 @@ paths:
           description: Success
         "404":
           description: Database not found.
+    post:
+      description: Create a new Mongo database in this instance.
+      operationId: addDatabase
+      parameters:
+        - name: dbName
+          in: path
+          type: string
+          required: true
+          description: The name of the database.
+        - name: options
+          in: body
+          description: Options to pass to the new database.
+          schema:
+            $ref: "#/definitions/DatabaseOptions"
+      responses:
+        "201":
+          description: Database created successfully.
+        "409":
+          description: Database already exists.
   /{dbName}/{collectionName}:
     x-swagger-router-controller: database
+    get:
+      description: Get colleciton meta data.
+      operationId: getCollection
+      parameters:
+        - name: dbName
+          in: path
+          type: string
+          required: true
+          description: Database name.
+        - name: collectionName
+          in: path
+          type: string
+          required: true
+          description: Collection name.
+      responses:
+        "200":
+          description: Success
+        "404":
+          description: Database or Collection not found.
     post:
       description: Create a new collection in the {dbName} database.
       operationId: addCollection
@@ -68,43 +106,12 @@ paths:
       responses:
         "201":
           description: Created
-          schema:
-            $ref: "#/definitions/ErrorResponse"
         "404":
           description: Database not found.
         "409":
           description: Collection already exists.
-  /collections:
-    x-swagger-router-controller: collections
-    put:
-      description: Change the schema of a collection
-      operationId: changeCollection
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-      
   /collections/{name}:
     x-swagger-router-controller: collections
-    get:
-      description: Get schema of a specific collection
-      operationId: getCollection
-      parameters:
-        - name: name
-          in: path
-          description: Name of the collection
-          required: true
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/CollectionsSchemaResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
     post:
       description: Insert a document into this collection.
       operationId: addDocument
@@ -128,20 +135,6 @@ paths:
             $ref: "#/definitions/AddCollectionResponse"
         default:
           description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    put:
-      description: Change a specific document in a collection
-      operationId: changeDocument
-      parameters:
-        - name: name
-          in: path
-          description: The name of the collection
-          required: true
-          type: string
-      responses:
-        "200":
-          description: Success
           schema:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
@@ -185,18 +178,9 @@ definitions:
     properties:
       schema:
         type: object
-        description: JSON object describing the schema of the new collection
-  CollectionsSchemaResponse:
-    required:
-      - collectionSchema
-      - size
-    properties:
-      collectionSchema: 
-        type: object
-        description: The schema of the collection
-      size:
-        type: number
-        description: The number of documents in the collection
+        description: JSON object describing the schema of the new collection.
+  DatabaseOptions:
+    type: object
   AddCollectionResponse:
     required:
       - message
